--- a/newsletters/week7_newsletter_enhanced.html
+++ b/newsletters/week7_newsletter_enhanced.html
@@ -131,14 +131,16 @@
                                 <tr>
                                     <td align="center" style="padding-bottom: 8px;">
                                         <!-- Logo/Icon Area -->
-                                        <div style="display: inline-block; background: linear-gradient(135deg, #a855f7 0%, #7c3aed 100%); border-radius: 12px; padding: 12px 16px; margin-bottom: 12px;">
-                                            <span style="font-size: 24px;">📊</span>
-                                        </div>
+                                        <a href="https://quantuminvestor.net" style="display: inline-block; text-decoration: none; margin-bottom: 12px;">
+                                            <img src="https://quantuminvestor.net/Media/Full-Logo.png" alt="Quantum Investor" width="120" style="display: block; height: auto; border: 0; max-width: 120px;" />
+                                        </a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td align="center" style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.2em; color: #a855f7; font-weight: 700; padding-bottom: 20px;">
-                                        QUANTUM INVESTOR DIGEST
+                                    <td align="center" style="font-size: 28px; text-transform: uppercase; letter-spacing: 0.2em; padding-bottom: 20px;">
+                                        <a href="https://quantuminvestor.net" style="color: #a855f7; font-weight: 700; text-decoration: none;">
+                                            QUANTUM INVESTOR DIGEST
+                                        </a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -155,7 +157,7 @@
                                     <td align="center">
                                         <div style="display: inline-block; background-color: rgba(168, 85, 247, 0.15); border: 1px solid rgba(168, 85, 247, 0.3); border-radius: 20px; padding: 8px 20px;">
                                             <span style="font-size: 12px; color: #a855f7; letter-spacing: 0.05em; font-weight: 600;">
-                                                NOV 20 – NOV 26, 2025
+                                                NOV 24 – NOV 28, 2025
                                             </span>
                                         </div>
                                     </td>
@@ -257,15 +259,17 @@
                         <td style="padding: 40px 32px 20px 32px; background-color: #111111;" class="mobile-padding">
                             <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
 
+                                <!-- Welcome Text -->
+                                <tr>
+                                    <td style="font-size: 16px; color: #E0E0E0; padding-bottom: 16px; line-height: 1.75;">
+                                        👋 Welcome back to the Quantum Investor Digest update
+                                    </td>
+                                </tr>
+
                                 <!-- Greeting Section -->
                                 <tr>
                                     <td style="background: linear-gradient(135deg, rgba(168, 85, 247, 0.12) 0%, rgba(168, 85, 247, 0.05) 100%); padding: 24px; border-left: 4px solid #a855f7; border-radius: 0 8px 8px 0; margin-bottom: 32px;">
                                         <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
-                                            <tr>
-                                                <td style="font-size: 15px; color: #9ca3af; padding-bottom: 12px; line-height: 1.5;">
-                                                    👋 Welcome back to the Quantum Investor Digest update
-                                                </td>
-                                            </tr>
                                             <tr>
                                                 <td style="font-size: 18px; color: #ffffff; line-height: 1.5; font-weight: 600;">
                                                     Portfolio bounces back with strong gains across storage and industrials
@@ -573,15 +577,10 @@
                         <td style="background: linear-gradient(180deg, #0a0a0a 0%, #000000 100%); border-top: 1px solid rgba(168, 85, 247, 0.2); padding: 40px 32px; text-align: center;">
                             <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
                                 <tr>
-                                    <td align="center" style="padding-bottom: 20px;">
-                                        <div style="display: inline-block; background: linear-gradient(135deg, #a855f7 0%, #7c3aed 100%); border-radius: 10px; padding: 10px 14px;">
-                                            <span style="font-size: 20px;">📊</span>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td align="center" style="font-size: 17px; font-weight: 600; color: #a855f7; padding-bottom: 16px; letter-spacing: 0.05em;">
-                                        Quantum Investor Digest
+                                    <td align="center" style="font-size: 17px; font-weight: 600; padding-bottom: 16px; letter-spacing: 0.05em;">
+                                        <a href="https://quantuminvestor.net" style="color: #a855f7; text-decoration: none;">
+                                            Quantum Investor Digest
+                                        </a>
                                     </td>
                                 </tr>
                                 <tr>
