Replace emojis with PNG icons in newsletter
Added PNG icon files for newsletter sections and updated the HTML template to use hosted icons instead of emojis for improved visual consistency. Included an implementation guide and a PowerShell script to automate icon downloads. This enhances cross-client compatibility and provides fallback emojis if images are blocked.

--- a/newsletters/week7_newsletter_enhanced.html
+++ b/newsletters/week7_newsletter_enhanced.html
@@ -303,7 +303,7 @@
                                             <tr>
                                                 <td width="48" style="vertical-align: top; padding-right: 16px;">
                                                     <div style="width: 48px; height: 48px; background: linear-gradient(135deg, #a855f7 0%, #7c3aed 100%); border-radius: 10px; display: flex; align-items: center; justify-content: center;">
-                                                        <span style="font-size: 24px; line-height: 48px; text-align: center; display: block;">💾</span>
+                                                        <img src="https://quantuminvestor.net/Media/icons/storage.png" alt="💾" width="32" height="32" style="display: block; margin: 8px auto;" />
                                                     </div>
                                                 </td>
                                                 <td style="vertical-align: top;">
@@ -327,7 +327,7 @@
                                             <tr>
                                                 <td width="48" style="vertical-align: top; padding-right: 16px;">
                                                     <div style="width: 48px; height: 48px; background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%); border-radius: 10px; display: flex; align-items: center; justify-content: center;">
-                                                        <span style="font-size: 24px; line-height: 48px; text-align: center; display: block;">🏭</span>
+                                                        <img src="https://quantuminvestor.net/Media/icons/industrial.png" alt="🏭" width="32" height="32" style="display: block; margin: 8px auto;" />
                                                     </div>
                                                 </td>
                                                 <td style="vertical-align: top;">
@@ -351,7 +351,7 @@
                                             <tr>
                                                 <td width="48" style="vertical-align: top; padding-right: 16px;">
                                                     <div style="width: 48px; height: 48px; background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%); border-radius: 10px; display: flex; align-items: center; justify-content: center;">
-                                                        <span style="font-size: 24px; line-height: 48px; text-align: center; display: block;">💻</span>
+                                                        <img src="https://quantuminvestor.net/Media/icons/tech.png" alt="💻" width="32" height="32" style="display: block; margin: 8px auto;" />
                                                     </div>
                                                 </td>
                                                 <td style="vertical-align: top;">
@@ -385,7 +385,9 @@
                                                 <!-- Best Performer -->
                                                 <td width="48%" class="mobile-stack mobile-stack-padding" style="background: linear-gradient(135deg, rgba(34, 197, 94, 0.15) 0%, rgba(34, 197, 94, 0.05) 100%); border: 2px solid rgba(34, 197, 94, 0.3); border-radius: 12px; padding: 28px 20px; text-align: center; vertical-align: top; position: relative;">
                                                     <!-- Trophy Icon -->
-                                                    <div style="font-size: 32px; margin-bottom: 12px;">🏆</div>
+                                                    <div style="margin-bottom: 12px;">
+                                                        <img src="https://quantuminvestor.net/Media/icons/trophy.png" alt="🏆" width="48" height="48" style="display: inline-block;" />
+                                                    </div>
                                                     <div style="font-weight: 700; color: #4ade80; font-size: 18px; letter-spacing: 0.05em; padding-bottom: 12px;">
                                                         WDC
                                                     </div>
@@ -408,7 +410,9 @@
                                                 <!-- Worst Performer (still positive!) -->
                                                 <td width="48%" class="mobile-stack mobile-stack-padding" style="background: linear-gradient(135deg, rgba(168, 85, 247, 0.12) 0%, rgba(168, 85, 247, 0.05) 100%); border: 2px solid rgba(168, 85, 247, 0.3); border-radius: 12px; padding: 28px 20px; text-align: center; vertical-align: top;">
                                                     <!-- Chart Icon -->
-                                                    <div style="font-size: 32px; margin-bottom: 12px;">📊</div>
+                                                    <div style="margin-bottom: 12px;">
+                                                        <img src="https://quantuminvestor.net/Media/icons/chart.png" alt="📊" width="48" height="48" style="display: inline-block;" />
+                                                    </div>
                                                     <div style="font-weight: 700; color: #a855f7; font-size: 18px; letter-spacing: 0.05em; padding-bottom: 12px;">
                                                         GE
                                                     </div>
@@ -463,7 +467,7 @@
                                         <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
                                             <tr>
                                                 <td width="40" style="vertical-align: top; padding-right: 16px;">
-                                                    <span style="font-size: 32px;">📈</span>
+                                                    <img src="https://quantuminvestor.net/Media/icons/trending-up.png" alt="📈" width="40" height="40" style="display: block;" />
                                                 </td>
                                                 <td style="vertical-align: top;">
                                                     <div style="font-size: 15px; color: #E0E0E0; line-height: 1.7;">
@@ -485,7 +489,9 @@
                                             <tr>
                                                 <!-- Portfolio -->
                                                 <td width="32%" class="mobile-stack mobile-stack-padding" style="background: linear-gradient(135deg, rgba(34, 197, 94, 0.15) 0%, rgba(34, 197, 94, 0.05) 100%); border: 2px solid rgba(34, 197, 94, 0.3); border-radius: 12px; padding: 24px 16px; text-align: center; vertical-align: top;">
-                                                    <div style="font-size: 28px; margin-bottom: 8px;">🚀</div>
+                                                    <div style="margin-bottom: 8px;">
+                                                        <img src="https://quantuminvestor.net/Media/icons/rocket.png" alt="🚀" width="40" height="40" style="display: inline-block;" />
+                                                    </div>
                                                     <div style="font-weight: 700; color: #4ade80; font-size: 14px; letter-spacing: 0.08em; padding-bottom: 8px; text-transform: uppercase;">
                                                         Portfolio
                                                     </div>
@@ -507,7 +513,9 @@
                                                 <td width="2%" class="mobile-hide"></td>
                                                 <!-- S&P 500 -->
                                                 <td width="32%" class="mobile-stack mobile-stack-padding" style="background: linear-gradient(135deg, rgba(168, 85, 247, 0.12) 0%, rgba(168, 85, 247, 0.05) 100%); border: 2px solid rgba(168, 85, 247, 0.2); border-radius: 12px; padding: 24px 16px; text-align: center; vertical-align: top;">
-                                                    <div style="font-size: 28px; margin-bottom: 8px;">📊</div>
+                                                    <div style="margin-bottom: 8px;">
+                                                        <img src="https://quantuminvestor.net/Media/icons/sp500.png" alt="📊" width="40" height="40" style="display: inline-block;" />
+                                                    </div>
                                                     <div style="font-weight: 700; color: #a855f7; font-size: 14px; letter-spacing: 0.08em; padding-bottom: 8px; text-transform: uppercase;">
                                                         S&P 500
                                                     </div>
@@ -529,7 +537,9 @@
                                                 <td width="2%" class="mobile-hide"></td>
                                                 <!-- Bitcoin -->
                                                 <td width="32%" class="mobile-stack mobile-stack-padding" style="background: linear-gradient(135deg, rgba(239, 68, 68, 0.12) 0%, rgba(239, 68, 68, 0.05) 100%); border: 2px solid rgba(239, 68, 68, 0.2); border-radius: 12px; padding: 24px 16px; text-align: center; vertical-align: top;">
-                                                    <div style="font-size: 28px; margin-bottom: 8px;">₿</div>
+                                                    <div style="margin-bottom: 8px;">
+                                                        <img src="https://quantuminvestor.net/Media/icons/bitcoin.png" alt="₿" width="40" height="40" style="display: inline-block;" />
+                                                    </div>
                                                     <div style="font-weight: 700; color: #f87171; font-size: 14px; letter-spacing: 0.08em; padding-bottom: 8px; text-transform: uppercase;">
                                                         Bitcoin
                                                     </div>
