--- a/Data/W8/narrative.html
+++ b/Data/W8/narrative.html
@@ -1,136 +1,105 @@
 <div class="prose prose-invert max-w-none">
-
-  <!-- INTRO / HOOK -->
   <p class="text-xl text-gray-300 mb-6">
-    <strong>The GenAi Chosen portfolio delivered a strong rebound this week</strong>, gaining +7.08% to lift total returns to +3.86% since inception. The portfolio remains fully invested across 10 positions, while the S&P 500 advanced +2.57% over the same period and Bitcoin rose +4.36% to continue stabilizing from recent lows. This week’s acceleration was driven primarily by broad-based strength across technology, industrials, energy, and materials holdings.
+    <strong>The GenAi Chosen portfolio surged +7.08% this week</strong>, lifting total returns since inception (October 9, 2025) to +3.86% while maintaining all 10 positions. Over the same Nov 20 – Nov 28 window, the S&P 500 advanced +2.57% and Bitcoin rose +4.36%, though both benchmarks still trail the portfolio on a cumulative basis.
   </p>
 
-  <!-- PORTFOLIO PROGRESS -->
   <h2 class="text-2xl font-bold mt-12 mb-6">Portfolio Progress Nov 20 – Nov 28, 2025</h2>
   <p class="text-gray-300 mb-6">
-    <strong>The GenAi Chosen portfolio is a $10,000 high-conviction equity strategy</strong> built and managed by a transformer-based AI model designed to outperform the S&P 500 through momentum-driven stock selection and disciplined risk controls. The strategy accepts volatility in pursuit of superior long-term upside and maintains position flexibility between 6 and 10 holdings.
+    <strong>The GenAi Chosen portfolio is a $10,000 high-conviction momentum strategy</strong> managed by a transformer-based AI model, built to outperform the S&P 500 by concentrating capital into 6–10 stocks with strong multi-week momentum and catalysts. The portfolio began with 10 equal-weight positions and now dynamically adapts as opportunities evolve.
   </p>
   <p class="text-gray-300 mb-6">
-    <strong>Since inception, the portfolio started with 10 equally sized positions</strong> and has since evolved dynamically with market conditions. This week’s strong rally reflects renewed momentum across semiconductors, precious metals, aerospace, and defensive sectors—lifting the total portfolio value to $10,386.
-  </p>
-  <p class="text-gray-300 mb-6">
-    <strong>The overall character of the week was a synchronized advance</strong>, with all 10 holdings posting gains and none approaching risk thresholds. With no position breaches or drawdown triggers, the portfolio maintains a stable foundation and continues to outperform the benchmark by 200 basis points.
+    <strong>This week’s strong rebound reflects broad strength across semiconductors, gold miners, and select industrials</strong>, reversing last week’s pullback and reaffirming the strategy’s ability to compound gains during momentum-driven upcycles.
   </p>
 
-  <!-- CURRENT HOLDINGS -->
   <p class="text-gray-300 mb-6">
-    <strong>The GenAi Chosen portfolio currently holds 10 positions</strong>, ranging from approximately 8.3% to 12.7% of total value, with no trades executed this week:
+    <strong>The GenAi Chosen portfolio currently holds 10 positions</strong>, with no trades executed this week and position weights ranging from ~8% to ~13%:
   </p>
-
   <ul class="list-disc list-inside space-y-1 text-gray-300 mb-6" aria-label="Current portfolio holdings">
     <li>Western Digital (WDC) - $1,317 (12.7%)</li>
     <li>Seagate Technology (STX) - $1,228 (11.8%)</li>
     <li>Howmet Aerospace (HWM) - $1,085 (10.4%)</li>
     <li>Newmont Corp (NEM) - $1,062 (10.2%)</li>
-    <li>General Electric (GE) - $991 (9.5%)</li>
+    <li>General Electric Vernova (GEV) - $932 (9.0%)</li>
     <li>CVS Health (CVS) - $1,007 (9.7%)</li>
     <li>NRG Energy (NRG) - $1,004 (9.7%)</li>
-    <li>GE Vernova (GEV) - $932 (9.0%)</li>
+    <li>General Electric (GE) - $991 (9.5%)</li>
     <li>Palantir Technologies (PLTR) - $894 (8.6%)</li>
     <li>Royal Caribbean Cruises (RCL) - $866 (8.3%)</li>
   </ul>
-
   <p class="text-gray-300 mb-6">
-    No trades were executed this week. Performance reflects pure market movement across all positions.
+    <strong>No trades were executed this week</strong>. Performance reflects pure market movement across all positions.
   </p>
 
-  <!-- WEEKLY PERFORMANCE HIGHLIGHTS -->
-  <h2 class="text-2xl font-bold mt-12 mb-6">Top Movers: Storage Strength, Gold Momentum, Broad Industrials Support</h2>
-
+  <h2 class="text-2xl font-bold mt-12 mb-6">Top Movers: Semiconductor Momentum and Materials Strength</h2>
   <p class="text-gray-300 mb-6">
-    <strong>Semiconductors led the advance</strong>, with Western Digital surging +12.47% and Seagate climbing +13.18%. Both continue to benefit from accelerating demand for AI-driven storage infrastructure, and their combined weights now represent over 24% of the portfolio without breaching concentration rules.
+    <strong>Semiconductors led the surge, with WDC and STX gaining +12–13% this week</strong>. Strong storage-demand forecasts and continued AI-driven hardware cycles pushed both stocks sharply higher, reinforcing their role as the portfolio’s primary momentum engine.
+  </p>
+  <p class="text-gray-300 mb-6">
+    <strong>Newmont Corp (NEM) jumped +10.4%</strong> as gold rallied on falling real yields and rising geopolitical uncertainty. This boost helped stabilize the portfolio’s Materials exposure and provided a useful non-tech counterbalance.
+  </p>
+  <p class="text-gray-300 mb-6">
+    <strong>Palantir rose +6.56%</strong> in a continuation of its multi-week recovery, helping ease prior drawdowns from earlier November softness. While still below peak value, the trend remains constructive.
+  </p>
+  <p class="text-gray-300 mb-6">
+    <strong>Royal Caribbean (RCL) gained +5.1%</strong>, finally showing signs of a rebound after several choppy weeks tied to travel demand moderation. Its weight remains manageable at ~8%, avoiding concentration risk even during periods of volatility.
   </p>
 
-  <p class="text-gray-300 mb-6">
-    <strong>Newmont delivered a strong +10.4% weekly move</strong>, supported by gold’s rally as rate-cut expectations firmed. This strengthens the portfolio’s materials exposure and provides valuable ballast against potential market volatility.
-  </p>
-
-  <p class="text-gray-300 mb-6">
-    <strong>Aerospace and industrials showed resilience</strong> with Howmet Aerospace (+3.43%) and GE Vernova (+5.67%) riding continued demand for energy-efficient aircraft components and clean-grid modernization. GE also added +2.06%, contributing to broad industrial stability.
-  </p>
-
-  <p class="text-gray-300 mb-6">
-    <strong>Defensive positions also advanced</strong>, with CVS (+5.01%) and NRG (+4.91%) providing consistent, lower-volatility gains that help offset the portfolio’s cyclical allocations. Both remain well within position-size targets.
-  </p>
-
-  <p class="text-gray-300 mb-6">
-    <strong>Consumer exposure improved modestly</strong> as Royal Caribbean gained +5.1%. Despite being the weakest performer since inception, its momentum this week kept it above all exit thresholds.
-  </p>
-
-  <!-- PERFORMANCE SNAPSHOT -->
   <h2 class="text-2xl font-bold mt-12 mb-6">Performance Snapshot</h2>
   <p class="text-gray-300 mb-6">
-    <strong>The table below compares the GenAi Chosen portfolio to the S&P 500 and Bitcoin</strong> across key checkpoints. The portfolio remains ahead of both benchmarks on a total-return basis following this week’s strong rebound.
+    <strong>The table below compares the GenAi Chosen portfolio to the S&P 500 and Bitcoin</strong> across key checkpoints, illustrating the portfolio’s regained leadership following this week’s broad upside breakout.
   </p>
+  <!-- performance_table.html auto-insert -->
 
-  <!-- PERFORMANCE TABLE WILL BE INSERTED HERE BY AUTOMATION -->
-
-  <!-- PERFORMANCE SINCE INCEPTION -->
   <h2 class="text-2xl font-bold mt-12 mb-6">Performance Since Inception</h2>
-
   <p class="text-gray-300 mb-6">
-    The chart below shows normalized performance for the portfolio, the S&P 500, and Bitcoin, allowing apples-to-apples comparison regardless of starting price levels.
+    <strong>The chart below shows normalized performance for the portfolio, the S&P 500, and Bitcoin</strong>, allowing apples-to-apples comparison regardless of starting price levels.
   </p>
   <p class="text-gray-300 mb-6">
-    All assets are normalized to 100 on the October 9, 2025 inception date, with 100 displayed as the central reference line. Readings above 100 indicate gains since inception; readings below 100 indicate losses.
+    <strong>All assets are normalized to 100 on the October 9, 2025 inception date</strong>, with 100 serving as the central reference line. Readings above 100 indicate cumulative gains; readings below 100 indicate drawdowns.
   </p>
   <p class="text-gray-300 mb-6">
-    The GenAi Chosen portfolio remains above the 100 baseline, with the S&P 500 sitting modestly above it as well, while Bitcoin continues to trail significantly below—highlighting the portfolio’s steady outperformance relative to both traditional and alternative benchmarks.
+    <strong>The GenAi Chosen portfolio now sits solidly above the 100 baseline</strong>, outpacing both the S&P 500 and Bitcoin, reaffirming the AI model’s ability to participate in upside momentum while maintaining sector and position discipline.
   </p>
+  <!-- performance_chart.svg auto-insert -->
 
-  <!-- CHART WILL BE INSERTED HERE BY AUTOMATION -->
-
-  <!-- THIS WEEK'S RECOMMENDATION -->
   <h2 class="text-2xl font-bold mt-12 mb-6">This Week's Recommendation: HOLD</h2>
-
   <ul class="list-disc list-inside space-y-3 text-gray-300 mb-6">
-    <li><strong>No position breaches the 20% cap</strong>, with the largest weight (WDC) at 12.7%—well within target sizing rules.</li>
-    <li><strong>No drawdown triggers activated</strong>; all holdings posted weekly gains and none approach the -25% threshold.</li>
-    <li><strong>The portfolio continues to outperform the S&P 500</strong> by roughly +200 basis points since inception, avoiding any underperformance-based rebalance trigger.</li>
-    <li><strong>All positions are comfortably above the $500 minimum size</strong>, reinforcing that no exit or consolidation is required.</li>
-    <li><strong>Momentum broadly supports existing allocations</strong>, with all 10 positions advancing this week and several showing strong multi-week trends.</li>
-    <li><strong>Position count remains exactly within mandate</strong> at 10 holdings, avoiding over-diversification or concentration risks.</li>
+    <li><strong>All positions remain well within risk limits</strong>, with no stock exceeding the 20% cap or falling below the $500 minimum size.</li>
+    <li><strong>No drawdown triggers activated</strong>: none of the holdings are down more than 25% from their portfolio peak values.</li>
+    <li><strong>The portfolio outperforms the S&P 500 by roughly +200 bps</strong> since inception, avoiding any benchmark underperformance triggers.</li>
+    <li><strong>Only one week of negative performance occurred in the past three weeks</strong>, so no momentum-break conditions apply.</li>
+    <li><strong>Current sector exposure remains balanced</strong>, with Technology around one-third of the portfolio—comfortably below the 45% sector cap.</li>
+    <li><strong>Momentum across the portfolio is improving</strong>, reducing the need to rotate into new candidates prematurely.</li>
   </ul>
 
-  <!-- MARKET OPPORTUNITIES UNDER REVIEW -->
   <h2 class="text-2xl font-bold mt-12 mb-6">Market Opportunities Under Review</h2>
   <p class="text-gray-300 mb-6">
-    While the current portfolio warrants a HOLD, our weekly market scan identified several momentum and quality leaders that merit attention for future consideration:
+    While the portfolio warrants a HOLD this week, the market scan identified several strong momentum candidates worth monitoring for future rotations or upgrades:
   </p>
-
   <ul class="list-disc list-inside space-y-3 text-gray-300 mb-6">
-    <li><strong>Eli Lilly (LLY) - $618.40</strong>: +9.4% 4-week and +24.1% 12-week momentum, strong GLP-1 growth, 79% institutional ownership. A high-quality healthcare compounder that would diversify the portfolio’s defensive exposure.</li>
-    <li><strong>Caterpillar (CAT) - $361.20</strong>: +10.8% 4-week momentum and strong infrastructure backlog. Offers durable-cycle industrial exposure complementary to HWM and GE.</li>
-    <li><strong>McDonald’s (MCD) - $309.50</strong>: +17.9% 12-week momentum with robust global same-store sales. Provides defensive consumer exposure to balance the portfolio’s cyclicality.</li>
-    <li><strong>NextEra Energy (NEE) - $82.10</strong>: +21.7% 12-week momentum, accelerating renewable projects, and strong institutional support. Adds clean-energy diversification without overlapping with NRG.</li>
-    <li><strong>Arista Networks (ANET) - $423.80</strong>: +32.9% 12-week momentum and top-tier AI networking exposure. A strong fit if future tech rotation opportunities arise.</li>
+    <li><strong>Wheaton Precious Metals (WPM)</strong> – Upward earnings revisions and a strong momentum score make it an attractive Materials diversifier should gold strength continue.</li>
+    <li><strong>NVIDIA (NVDA)</strong> – +7% four-week momentum and industry-leading AI fundamentals keep it a top-tier candidate for potential semiconductor rotation.</li>
+    <li><strong>Lam Research (LRCX)</strong> – High 12-month momentum and semi equipment leadership provide exposure to a deeper AI-capex cycle.</li>
+    <li><strong>Agnico Eagle Mines (AEM)</strong> – Strong long-term momentum and gold miner resilience make it compelling within Materials.</li>
+    <li><strong>Argan Inc. (AGX)</strong> – Strong industrial momentum and underweight cyclical exposure make AGX worth monitoring for future diversification.</li>
   </ul>
-
   <p class="text-gray-300 mb-6">
-    These candidates remain under active review but no additions are warranted until a rebalance trigger emerges or capital becomes available.
+    These candidates remain on the watchlist but do not justify immediate action while the current portfolio meets all performance and risk criteria.
   </p>
 
-  <!-- VERDICT -->
   <h2 class="text-2xl font-bold mt-12 mb-6">Verdict</h2>
   <p class="text-gray-300 mb-6">
-    <strong>This week calls for a disciplined HOLD</strong>. The portfolio remains healthy, diversified, and fully compliant with all risk controls while continuing to outperform its benchmark. Momentum is broadly supportive, and no position merits trimming or replacement.
+    <strong>This week clearly supports a disciplined HOLD</strong>. The portfolio is outperforming major benchmarks, all positions remain healthy, and sector exposure stays within target bands. Momentum conditions have strengthened across semiconductors and materials, reinforcing conviction in the current allocation.
   </p>
   <p class="text-gray-300 mb-6">
-    Looking ahead, the primary conditions that could shift the recommendation include any position approaching the 20% cap, a stock falling more than 25% from peak, or a multi-week divergence from the S&P 500. Until then, staying the course remains the optimal action.
+    Unless a position breaches the 20% limit, falls below $500, or experiences a -25% drawdown from peak, the strategy will remain focused on stability and letting winners compound.
   </p>
 
-  <!-- RISK DISCLOSURE -->
   <h2 class="text-2xl font-bold mt-12 mb-6">Risk Disclosure</h2>
   <p class="text-gray-300 mb-6">
     <strong>This portfolio is AI-generated and designed for aggressive growth</strong>. It carries higher volatility and risk than diversified index funds. Past performance does not guarantee future results. This content is for informational purposes only and should not be considered financial advice. Always consult a licensed financial advisor before making investment decisions.
   </p>
   <p class="text-gray-300 mb-6">
-    <strong>Next Review:</strong> Thursday, December 4, 2025, after market close.
+    <strong>Next Review:</strong> Thursday, December 5, 2025, after market close.
   </p>
-
 </div>
